corrected spacing on the header in mobile devices

--- a/style.css
+++ b/style.css
@@ -40,7 +40,6 @@ header{
     display:flex;
     align-items: center;
     justify-content: space-between;
-    color: var(--text-color);
     background-color: var(--accent-color);
     margin: 0;
     padding:0 40px;
@@ -54,12 +53,14 @@ h1{
     font-size: 30px;
     margin-left:10px;
     font-weight: 400;
+    color: var(--card-color2);
 }
 
 .logo{
     font-size:40px;
     font-weight: 400;
-   font-family: "Poppins",sans-serif;
+    font-family: "Poppins",sans-serif;
+    color: var(--card-color2);
 }
 
 h2, h3, h4{
@@ -315,7 +316,7 @@ input:focus, textarea:focus{
 
 @media only screen and (max-width:800px){
     header{
-        justify-content: center;
+        justify-content: space-between;
     }
 
     #navbar{
